browser.privateWindowSeparation.enabled broken in Firefox 127
Categories
(Firefox :: Private Browsing, defect)
Tracking
()
People
(Reporter: bugzilla-mozilla24, Assigned: ericchen647)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files, 1 obsolete file)
|
48 bytes,
text/x-phabricator-request
|
Details | Review | |
|
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-beta+
|
Details | Review |
|
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-release+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:127.0) Gecko/20100101 Firefox/127.0
Steps to reproduce:
In https://bugzilla.mozilla.org/show_bug.cgi?id=1795931 it was explained that
browser.privateWindowSeparation.enabled can be toggled to keep grouping normal and private windows in the Windows taskbar, which is my preferred behaviour.
Actual results:
As of, Firefox 127, this behaviour no longer works. Private windows are at a completely different place my in Windows 10 taskbar compared to normal windows.
Expected results:
Private windows should appear in the same window group as normal windows.
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:127.0) Gecko/20100101 Firefox/127.0
Same problem here. Firefox just updated itself to version 127.0 and now private windows open with a separate icon in my taskbar although browser.privateWindowSeparation.enabled is still set to false. Please fix this! Thanks in advance!
Updated•1 year ago
|
Updated•1 year ago
|
Comment 7•1 year ago
|
||
Good to see this being worked on. I fixed up the bug dependencies.
Updated•1 year ago
|
Comment 8•1 year ago
|
||
Set release status flags based on info from the regressing bug 1883673
Comment 9•1 year ago
|
||
Is this safe enough for uplift?
(There is a lot of clamor to restore this feature, e.g., https://connect.mozilla.org/t5/ideas/bring-back-the-option-to-group-the-private-and-normal-firefox/idi-p/59173)
Comment 10•1 year ago
|
||
Comment 11•1 year ago
|
||
| bugherder | ||
Updated•1 year ago
|
Comment 12•1 year ago
|
||
The patch landed in nightly and beta is affected.
:erchen, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox128towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 13•1 year ago
•
|
||
Approval Request Comment
[Feature/Bug causing the regression]: Bug 1901840
[User impact if declined]: A lot of requests on Mozilla Connect asking for this pref to be restored, as they use it commonly.
[Is this code covered by automated tests?]: Unknown
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: Yes
- Go to about:config
- Toggle browser.privateWindowSeparation.enabled to false
- Open a private browsing tab, there should not be a seperate taskbar icon for it.
- Toggle browser.privateWindowSeparation.enabled to true
- Open a private browsing tab, there should be a seperate taskbar icon for it.
[Why is the change risky/not risky?]: Not risky - It is restoring a pref that was in Firefox for the past 20 releases and removed in 127.
[String changes made/needed]: none
| Assignee | ||
Comment 14•1 year ago
|
||
Apologies for setting the flag on the wrong attachment.
| Assignee | ||
Comment 15•1 year ago
•
|
||
Comment on attachment 9407332 [details]
Bug 1901840 - restore browser.privateWindowSeparation.enabled pref r=nshukla!
[removed]
Comment 16•1 year ago
|
||
Comment on attachment 9407953 [details]
Uplift to Beta (placeholder file)
Please follow the documented process for requesting an uplift.
https://wiki.mozilla.org/Release_Management/Requesting_an_Uplift
Updated•1 year ago
|
| Assignee | ||
Comment 17•1 year ago
|
||
Original Revision: https://phabricator.services.mozilla.com/D213651
Updated•1 year ago
|
Comment 18•1 year ago
|
||
beta Uplift Approval Request
- User impact if declined: A lot of requests on Mozilla Connect asking for this pref to be restored, as they use it commonly.
- Code covered by automated testing: no
- Fix verified in Nightly: yes
- Needs manual QE test: yes
- Steps to reproduce for manual QE testing: Go to about:config Toggle browser.privateWindowSeparation.enabled to false Open a private browsing tab, there should not be a seperate taskbar icon for it. Toggle browser.privateWindowSeparation.enabled to true Open a private browsing tab, there should be a seperate taskbar icon for it.
- Risk associated with taking this patch: Low
- Explanation of risk level: Not risky - It is restoring a pref that was in Firefox for the past 20 releases and removed in 127.
- String changes made/needed: None
- Is Android affected?: no
Comment 19•1 year ago
|
||
beta Uplift Approval Request
- User impact if declined: A lot of requests on Mozilla Connect asking for this pref to be restored, as they use it commonly.
- Code covered by automated testing: no
- Fix verified in Nightly: yes
- Needs manual QE test: yes
- Steps to reproduce for manual QE testing: 1. Go to about:config 2. Toggle browser.privateWindowSeparation.enabled to false 3. Open a private browsing tab, there should not be a seperate taskbar icon for it. 4. Toggle browser.privateWindowSeparation.enabled to true 5. Open a private browsing tab, there should be a seperate taskbar icon for it.
- Risk associated with taking this patch: Low
- Explanation of risk level: Not risky - It is restoring a pref that was in Firefox for the past 20 releases and removed in 127.
- String changes made/needed: None
- Is Android affected?: no
Updated•1 year ago
|
Updated•1 year ago
|
Comment 20•1 year ago
|
||
| uplift | ||
Updated•1 year ago
|
Updated•1 year ago
|
Comment 22•1 year ago
•
|
||
I reproduced this issue on an affected Nightly build from 2024-06-11 on Windows 10.
Verified as fixed on Windows 10 and Windows 11 using Firefox 128.0b5 (20240619092300) and Firefox Nightly 129.0a1 (20240620040816). With browser.privateWindowSeparation.enabled set to false, there is no separate taskbar icon; normal and private windows are grouped under one icon.
On Ubuntu and macOS, regardless of the state of the pref, there is only one icon for both normal and private windows. Is this expected?
Even though I am pretty sure this is a Windows-specific issue, could you please confirm so I can mark this as verified?
| Assignee | ||
Comment 23•1 year ago
|
||
(In reply to Giorgia Nichita, Release Desktop QA from comment #22)
I reproduced this issue on an affected Nightly build from 2024-06-11 on Windows 10.
Verified as fixed on Windows 10 and Windows 11 using Firefox 128.0b5 (20240619092300) and Firefox Nightly 129.0a1 (20240620040816). With browser.privateWindowSeparation.enabled set to false, there is no separate taskbar icon; normal and private windows are grouped under one icon.
On Ubuntu and macOS, regardless of the state of the pref, there is only one icon for both normal and private windows. Is this expected?
Even though I am pretty sure this is a Windows-specific issue, could you please confirm so I can mark this as verified?
Thank you for testing, yes this is a Windows-specific issue. This pref is not applicable for macOS and Linux.
Comment 24•1 year ago
|
||
Thanks! I will mark this as verified based on the above comments.
Updated•1 year ago
|
| Assignee | ||
Comment 25•1 year ago
|
||
Original Revision: https://phabricator.services.mozilla.com/D213651
Updated•1 year ago
|
Comment 26•1 year ago
|
||
release Uplift Approval Request
- User impact if declined: A lot of requests on Mozilla Connect asking for this pref to be restored, as they use it commonly.
- Code covered by automated testing: no
- Fix verified in Nightly: yes
- Needs manual QE test: no
- Steps to reproduce for manual QE testing: n/a
- Risk associated with taking this patch: Low
- Explanation of risk level: Not risky - It is restoring a pref that was in Firefox for the past 20 releases and removed in 127. QA also tested in Beta
- String changes made/needed: none
- Is Android affected?: no
Updated•1 year ago
|
Updated•1 year ago
|
Comment 27•1 year ago
|
||
| uplift | ||
Comment 28•1 year ago
|
||
Verified as fixed on Windows 10 and Windows 11 using Firefox 127.0.2 (20240624183754).
Description
•