Bug 1901840 - restore browser.privateWindowSeparation.enabled pref  a=RyanVM

Original Revision: https://phabricator.services.mozilla.com/D213651

Differential Revision: https://phabricator.services.mozilla.com/D214120